# sniper-base

./: .dockerignore  .env  Cargo.toml  Dockerfile  config.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
node/: docker-compose.yml
src/: buy.rs  config.rs  constants.rs  decoder.rs  diagnostics.rs  email.rs  index.ts  lock_manager.rs  logger.rs  main.rs  monitor.rs  nonce.rs  persistence.rs  position_dao.rs  processor.rs  sell.rs  simulation.rs  spend_limit.rs  strategies.rs
src/strategies/: aerodrome.rs  v2.rs  v3.rs  v4.rs  virtuals.rs
