[package]
name = "base_sniper"
version = "0.2.1"
edition = "2021"

[dependencies]
ethers = { version = "2.0.14", features = ["ws", "rustls", "abigen", "ipc"] }
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
revm = { version = "3.5.0", features = ["ethersdb", "std"] }
rand = "0.8"
dotenv = "0.15"
home = "=0.5.9"
ruint = "=1.16.0"
base64ct = "=1.6.0"
lettre = { version = "0.10", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true